[project]
name = "soaphound"
version = "1.1.0"
description = "BloodHound ingestor using ADWS (Active Directory Web Services), with Kerberos support"
authors = [
    {name = "@belettet1m0ree"},
    {name = "@Sant0rryu"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["bloodhound", "active-directory", "adws", "pentest", "red-team", "kerberos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "impacket>=0.11.0",
    "dnspython>=2.0.0",
    "pyasn1>=0.4.8",
    "pycryptodomex>=3.10.0",
    "cryptography>=3.4.0",
    "ldap3>=2.9.0",
    "setuptools>=65.0",
]

[project.optional-dependencies]
shadowcred = ["dsinternals>=1.2.4"]

[project.scripts]
soaphound = "soaphound.soaphound:main"

[project.urls]
Homepage = "https://github.com/j4s0nmo0n/Soaphound.py"
Repository = "https://github.com/j4s0nmo0n/Soaphound.py"
Issues = "https://github.com/j4s0nmo0n/Soaphound.py/issues"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["soaphound*"]

[tool.setuptools.package-data]
"soaphound" = ["**/*.py"]

# Conserve aussi la config poetry pour ceux qui développent avec poetry
[tool.poetry]
packages = [{include = "soaphound", from = "src"}]

[tool.poetry.scripts]
soaphound = "soaphound.soaphound:main"
